Minor fixes to Swift 1.2 article

--- a/2015-02-09-swift-1.2.md
+++ b/2015-02-09-swift-1.2.md
@@ -12,7 +12,7 @@ In what follows, let's look at two major aspects of the release that will signif
 
 ## Improved Optional Binding
 
-Swift 1.2 allows multiple simultaneous optional bindings, providing an escape from the trap of needing multiple nested `if let` statements to unwrap multiple values. Multiple optional bindings are separated by commas and can be paired by a `where` clause that acts like the expression in a traditional `if` statement. As such, the byzantine [pyramid of doom](http://www.scottlogic.com/blog/2014/12/08/swift-optional-pyramids-of-doom.html) has been renovated into a mid-century modern ranch:
+Swift 1.2 allows multiple simultaneous optional bindings, providing an escape from the trap of needing deeply nested `if let` statements to unwrap multiple values. Multiple optional bindings are separated by commas and can be paired with a `where` clause that acts like the expression in a traditional `if` statement. As such, the byzantine [pyramid of doom](http://www.scottlogic.com/blog/2014/12/08/swift-optional-pyramids-of-doom.html) has been renovated into a mid-century modern ranch:
 
 **Old:**
 
