Revise NSError table layout

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -154,362 +154,153 @@ On the plus side, the Foundation URL Loading system is incredibly mature, and ta
 
 As such, here is an exhaustive, well-formatted table at your disposal:
 
-<table>
-<tr><td rowspan="3">-1</td><td></td></tr>
-<tr><td><tt>NSURLErrorUnknown</tt></td></tr>
-<tr><td></td></tr>
-
-<tr><td rowspan="3">1</td><td><tt>kCFHostErrorHostNotFound</tt></td>
-<tr><td></td></tr>
-<tr><td><q>Indicates that the DNS lookup failed.</q></td></tr>
-
-<tr><td rowspan="3">2</td><td><tt>kCFHostErrorUnknown</tt></td></tr><tr><td></td></tr>
-<tr><td><q>An unknown error occurred (a name server failure, for example). For additional information, query the <tt>kCFGetAddrInfoFailureKey</tt> to get the value returned from <tt>getaddrinfo</tt>; lookup in <tt>netdb.h</tt></q></td></tr>
-<tr><td></td></tr>
-
-<tr><td rowspan="3">100</td><td><tt>kCFSOCKSErrorUnknownClientVersion</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The SOCKS server rejected access because it does not support connections with the requested SOCKS version.Query <tt>kCFSOCKSStatusCodeKey</tt> to recover the status code returned by the server.</q></td></tr>
-
-<tr><td rowspan="3">101</td><td><tt>kCFSOCKSErrorUnsupportedServerVersion</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The version of SOCKS requested by the server is not supported. Query <tt>kCFSOCKSStatusCodeKey</tt> to recover the status code returned by the server.<br/>Query the <tt>kCFSOCKSVersionKey</tt> to find the version requested by the server.</q></td></tr>
-
-
-<tr><th colspan="2">SOCKS4 Error</th></tr>
-
-<tr><td rowspan="3">110</td><td><tt>kCFSOCKS4ErrorRequestFailed</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>Request rejected or failed by the server.</q></td></tr>
-
-<tr><td rowspan="3">111</td><td><tt>kCFSOCKS4ErrorIdentdFailed</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>Request rejected because SOCKS server cannot connect to identd on the client.</q></td></tr>
-
-<tr><td rowspan="3">112</td><td><tt>kCFSOCKS4ErrorIdConflict</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>Request rejected because the client program and identd report different user-ids.</q></td></tr>
-
-<tr><td rowspan="3">113</td><td><tt>kCFSOCKS4ErrorUnknownStatusCode</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The status code returned by the server is unknown.</q></td></tr>
-
-
-<tr><th colspan="2">SOCKS5 Errors</th></tr>
-
-<tr><td rowspan="3">120</td><td><tt>kCFSOCKS5ErrorBadState</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The stream is not in a state that allows the requested operation.</q></td></tr>
-
-<tr><td rowspan="3">121</td><td><tt>kCFSOCKS5ErrorBadResponseAddr</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The address type returned is not supported.</q></td></tr>
-
-<tr><td rowspan="3">122</td><td><tt>kCFSOCKS5ErrorBadCredentials</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The SOCKS server refused the client connection because of bad login credentials.</q></td></tr>
-
-<tr><td rowspan="3">123</td><td><tt>kCFSOCKS5ErrorUnsupportedNegotiationMethod</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The requested method is not supported. Query <tt>kCFSOCKSNegotiationMethodKey</tt> to find the method requested.</q></td></tr>
-
-<tr><td rowspan="3">124</td><td><tt>kCFSOCKS5ErrorNoAcceptableMethod</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The client and server could not find a mutually agreeable authentication method.</q></td></tr>
-
-
-<tr><th colspan="2">FTP Errors</th></tr>
-
-<tr><td rowspan="3">200</td><td><tt>kCFFTPErrorUnexpectedStatusCode</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The server returned an unexpected status code. Query the <tt>kCFFTPStatusCodeKey</tt> to get the status code returned by the server</q></td></tr>
-
-
-<tr><th colspan="2">HTTP Errors</th></tr>
-
-<tr><td rowspan="3">300</td><td><tt>kCFErrorHTTPAuthenticationTypeUnsupported</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The client and server could not agree on a supported authentication type.</q></td></tr>
-
-<tr><td rowspan="3">301</td><td><tt>kCFErrorHTTPBadCredentials</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The credentials provided for an authenticated connection were rejected by the server.</q></td></tr>
-
-<tr><td rowspan="3">302</td><td><tt>kCFErrorHTTPConnectionLost</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The connection to the server was dropped. This usually indicates a highly overloaded server.</q></td></tr>
-
-<tr><td rowspan="3">303</td><td><tt>kCFErrorHTTPParseFailure</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The HTTP server response could not be parsed.</q></td></tr>
-
-<tr><td rowspan="3">304</td><td><tt>kCFErrorHTTPRedirectionLoopDetected</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>Too many HTTP redirects occurred before reaching a page that did not redirect the client to another page. This usually indicates a redirect loop.</q></td></tr>
-
-<tr><td rowspan="3">305</td><td><tt>kCFErrorHTTPBadURL</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The requested URL could not be retrieved.</q></td></tr>
-
-<tr><td rowspan="3">306</td><td><tt>kCFErrorHTTPProxyConnectionFailure</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>A connection could not be established to the HTTP proxy.</q></td></tr>
-
-<tr><td rowspan="3">307</td><td><tt>kCFErrorHTTPBadProxyCredentials</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The authentication credentials provided for logging into the proxy were rejected.</q></td></tr>
-
-
-<tr><td rowspan="3">308</td><td><tt>kCFErrorPACFileError</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>An error occurred with the proxy autoconfiguration file.</q></td></tr>
-
-<tr><td rowspan="3">309</td><td><tt>kCFErrorPACFileAuth</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The authentication credentials provided by the proxy autoconfiguration file were rejected.</q></td></tr>
-
-<tr><td rowspan="3">310</td><td><tt>kCFErrorHTTPSProxyConnectionFailure</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>A connection could not be established to the HTTPS proxy.</q></td></tr>
-
-<tr><td rowspan="3">311</td><td><tt>kCFStreamErrorHTTPSProxyFailureUnexpectedResponseToCONNECTMethod</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The HTTPS proxy returned an unexpected status code, such as a 3xx redirect.</q></td></tr>
-
-
-<tr><th colspan="2">CFURLConnection &amp; CFURLProtocol Errors</th></tr>
-
-<tr><td rowspan="3">-998</td><td><tt>kCFURLErrorUnknown</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>An unknown error occurred.</q></td></tr>
-
-<tr><td rowspan="3">-999</td><td><tt>kCFURLErrorCancelled</tt></td></tr>
-<tr><td><tt>NSURLErrorCancelled</tt></td></tr>
-<tr><td><q>The connection was cancelled.</q></td></tr>
-
-<tr><td rowspan="3">-1000</td><td><tt>kCFURLErrorBadURL</tt></td></tr>
-<tr><td><tt>NSURLErrorBadURL</tt></td></tr>
-<tr><td><q>The connection failed due to a malformed URL.</q></td></tr>
-
-<tr><td rowspan="3">-1001</td><td><tt>kCFURLErrorTimedOut</tt></td></tr>
-<tr><td><tt>NSURLErrorTimedOut</tt></td></tr>
-<tr><td><q>The connection timed out.</q></td></tr>
-
-<tr><td rowspan="3">-1002</td><td><tt>kCFURLErrorUnsupportedURL</tt></td></tr>
-<tr><td><tt>NSURLErrorUnsupportedURL</tt></td></tr>
-<tr><td><q>The connection failed due to an unsupported URL scheme.</q></td></tr>
-
-<tr><td rowspan="3">-1003</td><td><tt>kCFURLErrorCannotFindHost</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotFindHost</tt></td></tr>
-<tr><td><q>The connection failed because the host could not be found.</q></td></tr>
-
-<tr><td rowspan="3">-1004</td><td><tt>kCFURLErrorCannotConnectToHost</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotConnectToHost</tt></td></tr>
-<tr><td><q>The connection failed because a connection cannot be made to the host.</q></td></tr>
-
-<tr><td rowspan="3">-1005</td><td><tt>kCFURLErrorNetworkConnectionLost</tt></td></tr>
-<tr><td><tt>NSURLErrorNetworkConnectionLost</tt></td></tr>
-<tr><td><q>The connection failed because the network connection was lost.</q></td></tr>
-
-<tr><td rowspan="3">-1006</td><td><tt>kCFURLErrorDNSLookupFailed</tt></td></tr>
-<tr><td><tt>NSURLErrorDNSLookupFailed</tt></td></tr>
-<tr><td><q>The connection failed because the DNS lookup failed.</q></td></tr>
-
-<tr><td rowspan="3">-1007</td><td><tt>kCFURLErrorHTTPTooManyRedirects</tt></td></tr>
-<tr><td><tt>NSURLErrorHTTPTooManyRedirects</tt></td></tr>
-<tr><td><q>The HTTP connection failed due to too many redirects.</q></td></tr>
-
-<tr><td rowspan="3">-1008</td><td><tt>kCFURLErrorResourceUnavailable</tt></td></tr>
-<tr><td><tt>NSURLErrorResourceUnavailable</tt></td></tr>
-<tr><td><q>The connection’s resource is unavailable.</q></td></tr>
-
-<tr><td rowspan="3">-1009</td><td><tt>kCFURLErrorNotConnectedToInternet</tt></td></tr>
-<tr><td><tt>NSURLErrorNotConnectedToInternet</tt></td></tr>
-<tr><td><q>The connection failed because the device is not connected to the internet.</q></td></tr>
-
-<tr><td rowspan="3">-1010</td><td><tt>kCFURLErrorRedirectToNonExistentLocation</tt></td></tr>
-<tr><td><tt>NSURLErrorRedirectToNonExistentLocation</tt></td></tr>
-<tr><td><q>The connection was redirected to a nonexistent location.</q></td></tr>
-
-<tr><td rowspan="3">-1011</td><td><tt>kCFURLErrorBadServerResponse</tt></td></tr>
-<tr><td><tt>NSURLErrorBadServerResponse</tt></td></tr>
-<tr><td><q>The connection received an invalid server response.</q></td></tr>
-
-<tr><td rowspan="3">-1012</td><td><tt>kCFURLErrorUserCancelledAuthentication</tt></td></tr>
-<tr><td><tt>NSURLErrorUserCancelledAuthentication</tt></td></tr>
-<tr><td><q>The connection failed because the user cancelled required authentication.</q></td></tr>
-
-<tr><td rowspan="3">-1013</td><td><tt>kCFURLErrorUserAuthenticationRequired</tt></td>
-<tr><td><tt>NSURLErrorUserAuthenticationRequired</tt></td></tr>
-<tr><td><q>The connection failed because authentication is required.</q></td></tr>
-
-<tr><td rowspan="3">-1014</td><td><tt>kCFURLErrorZeroByteResource</tt></td></tr>
-<tr><td><tt>NSURLErrorZeroByteResource</tt></td></tr>
-<tr><td><q>The resource retrieved by the connection is zero bytes.</q></td></tr>
-
-<tr><td rowspan="3">-1015</td><td><tt>kCFURLErrorCannotDecodeRawData</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotDecodeRawData</tt></td></tr>
-<tr><td><q>The connection cannot decode data encoded with a known content encoding.</q></td></tr>
-
-<tr><td rowspan="3">-1016</td><td><tt>kCFURLErrorCannotDecodeContentData</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotDecodeContentData</tt></td></tr>
-<tr><td><q>The connection cannot decode data encoded with an unknown content encoding.</q></td></tr>
-
-<tr><td rowspan="3">-1017</td><td><tt>kCFURLErrorCannotParseResponse</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotParseResponse</tt></td></tr>
-<tr><td><q>The connection cannot parse the server’s response.</q></td></tr>
-
-<tr><td rowspan="3">-1018</td><td><tt>kCFURLErrorInternationalRoamingOff</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The connection failed because international roaming is disabled on the device.</q></td></tr>
-
-<tr><td rowspan="3">-1019</td><td><tt>kCFURLErrorCallIsActive</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The connection failed because a call is active.</q></td></tr>
-
-<tr><td rowspan="3">-1020</td><td><tt>kCFURLErrorDataNotAllowed</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The connection failed because data use is currently not allowed on the device.</q></td></tr>
-
-<tr><td rowspan="3">-1021</td><td><tt>kCFURLErrorRequestBodyStreamExhausted</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The connection failed because its request’s body stream was exhausted.</q></td></tr>
-
-<tr><th colspan="2">File Errors</th></tr>
-
-<tr><td rowspan="3">-1100</td><td><tt>kCFURLErrorFileDoesNotExist</tt></td></tr>
-<tr><td><tt>NSURLErrorFileDoesNotExist</tt></td></tr>
-<tr><td><q>The file operation failed because the file does not exist.</q></td></tr>
-
-<tr><td rowspan="3">-1101</td><td><tt>kCFURLErrorFileIsDirectory</tt></td></tr>
-<tr><td><tt>NSURLErrorFileIsDirectory</tt></td></tr>
-<tr><td><q>The file operation failed because the file is a directory.</q></td></tr>
-
-<tr><td rowspan="3">-1102</td><td><tt>kCFURLErrorNoPermissionsToReadFile</tt></td></tr>
-<tr><td><tt>NSURLErrorNoPermissionsToReadFile</tt></td></tr>
-<tr><td><q>The file operation failed because it does not have permission to read the file.</q></td></tr>
-
-<tr><td rowspan="3">-1103</td><td><tt>kCFURLErrorDataLengthExceedsMaximum</tt></td></tr>
-<tr><td><tt>NSURLErrorDataLengthExceedsMaximum</tt></td></tr>
-<tr><td><q>The file operation failed because the file is too large.</q></td></tr>
-
-<tr><th colspan="2">SSL Errors</th></tr>
-
-<tr><td rowspan="3">-1200</td><td><tt>kCFURLErrorSecureConnectionFailed</tt></td></tr>
-<tr><td><tt>NSURLErrorSecureConnectionFailed</tt></td></tr>
-<tr><td><q>The secure connection failed for an unknown reason.</q></td></tr>
-
-<tr><td rowspan="3">-1201</td><td><tt>kCFURLErrorServerCertificateHasBadDate</tt></td></tr>
-<tr><td><tt>NSURLErrorServerCertificateHasBadDate</tt></td></tr>
-<tr><td><q>The secure connection failed because the server’s certificate has an invalid date.</q></td></tr>
-
-<tr><td rowspan="3">-1202</td><td><tt>kCFURLErrorServerCertificateUntrusted</tt></td></tr>
-<tr><td><tt>NSURLErrorServerCertificateUntrusted</tt></td></tr>
-<tr><td><q>The secure connection failed because the server’s certificate is not trusted.</q></td></tr>
-
-<tr><td rowspan="3">-1203</td><td><tt>kCFURLErrorServerCertificateHasUnknownRoot</tt></td>
-<tr><td><tt>NSURLErrorServerCertificateHasUnknownRoot</tt></td></tr>
-<tr><td><q>The secure connection failed because the server’s certificate has an unknown root.</q></td></tr>
-
-<tr><td rowspan="3">-1204</td><td><tt>kCFURLErrorServerCertificateNotYetValid</tt></td></tr>
-<tr><td><tt>NSURLErrorServerCertificateNotYetValid</tt></td></tr>
-<tr><td><q>The secure connection failed because the server’s certificate is not yet valid.</q></td></tr>
-
-<tr><td rowspan="3">-1205</td><td><tt>kCFURLErrorClientCertificateRejected</tt></td>
-<tr><td><tt>NSURLErrorClientCertificateRejected</tt></td></tr>
-<tr><td><q>The secure connection failed because the client’s certificate was rejected.</q></td></tr>
-
-<tr><td rowspan="3">-1206</td><td><tt>kCFURLErrorClientCertificateRequired</tt></td></tr>
-<tr><td><tt>NSURLErrorClientCertificateRequired</tt></td></tr>
-<tr><td><q>The secure connection failed because the server requires a client certificate.</q></td></tr>
-
-<tr><th colspan="2">Download and File I/O Errors</th></tr>
-
-<tr><td rowspan="3">-2000</td><td><tt>kCFURLErrorCannotLoadFromNetwork</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotLoadFromNetwork</tt></td></tr>
-<tr><td><q>The connection failed because it is being required to return a cached resource, but one is not available.</q></td></tr>
-
-<tr><td rowspan="3">-3000</td><td><tt>kCFURLErrorCannotCreateFile</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotCreateFile</tt></td></tr>
-<tr><td><q>The file cannot be created.</q></td></tr>
-
-<tr><td rowspan="3">-3001</td><td><tt>kCFURLErrorCannotOpenFile</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotOpenFile</tt></td></tr>
-<tr><td><q>The file cannot be opened.</q></td></tr>
-
-<tr><td rowspan="3">-3002</td><td><tt>kCFURLErrorCannotCloseFile</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotCloseFile</tt></td></tr>
-<tr><td><q>The file cannot be closed.</q></td></tr>
-
-<tr><td rowspan="3">-3003</td><td><tt>kCFURLErrorCannotWriteToFile</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotWriteToFile</tt></td></tr>
-<tr><td><q>The file cannot be written.</q></td></tr>
-
-<tr><td rowspan="3">-3004</td><td><tt>kCFURLErrorCannotRemoveFile</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotRemoveFile</tt></td></tr>
-<tr><td><q>The file cannot be removed.</q></td></tr>
-
-<tr><td rowspan="3">-3005</td><td><tt>kCFURLErrorCannotMoveFile</tt></td></tr>
-<tr><td><tt>NSURLErrorCannotMoveFile</tt></td></tr>
-<tr><td><q>The file cannot be moved.</q></td></tr>
-
-<tr><td rowspan="3">-3006</td><td><tt>kCFURLErrorDownloadDecodingFailedMidStream</tt></td></tr>
-<tr><td><tt>NSURLErrorDownloadDecodingFailedMidStream</tt></td></tr>
-<tr><td><q>The download failed because decoding of the downloaded data failed mid-stream.</q></td></tr>
-
-<tr><td rowspan="3">-3007</td><td><tt>kCFURLErrorDownloadDecodingFailedToComplete</tt></td></tr>
-<tr><td><tt>NSURLErrorDownloadDecodingFailedToComplete</tt></td></tr>
-<tr><td><q>The download failed because decoding of the downloaded data failed to complete.</q></td></tr>
-
-
-<tr><th colspan="2">Cookie errors</th></tr>
-
-<tr><td rowspan="3">-4000</td><td><tt>kCFHTTPCookieCannotParseCookieFile</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The cookie file cannot be parsed.</q></td></tr>
-
-
-<tr><th colspan="2">CFNetServices Errors</th></tr>
-
-<tr><td rowspan="3">-72000L</td><td><tt>kCFNetServiceErrorUnknown</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>An unknown error occurred.</q></td></tr>
-
-<tr><td rowspan="3">-72001L</td><td><tt>kCFNetServiceErrorCollision</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>An attempt was made to use a name that is already in use.</q></td></tr>
-
-<tr><td rowspan="3">-72002L</td><td><tt>kCFNetServiceErrorNotFound</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q><em>Not used.</em></q></td></tr>
-
-<tr><td rowspan="3">-72003L</td><td><tt>kCFNetServiceErrorInProgress</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>A new search could not be started because a search is already in progress.</q></td></tr>
-
-<tr><td rowspan="3">-72004L</td><td><tt>kCFNetServiceErrorBadArgument</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>A required argument was not provided or was not valid.</q></td></tr>
-
-<tr><td rowspan="3">-72005L</td><td><tt>kCFNetServiceErrorCancel</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>The search or service was cancelled.</q></td></tr>
-
-<tr><td rowspan="3">-72006L</td><td><tt>kCFNetServiceErrorInvalid</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>Invalid data was passed to a <tt>CFNetServices</tt> function.</q></td></tr>
-
-<tr><td rowspan="3">-72007L</td><td><tt>kCFNetServiceErrorTimeout</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>A search failed because it timed out.</q></td></tr>
-
-<tr><td rowspan="3">-73000L</td><td><tt>kCFNetServiceErrorDNSServiceFailure</tt></td></tr>
-<tr><td></td></tr>
-<tr><td><q>An error from DNS discovery; look at <tt>kCFDNSServiceFailureKey</tt> to get the error number and interpret using <tt>dnssd.h</tt></q><td></td>
-</table>
+| Code | Description |
+|------|-------------|
+| -1<br>`NSURLErrorUnknown` |  |
+| 1<br>`kCFHostErrorHostNotFound` | <q>Indicates that the DNS lookup failed.</q> |
+| 2<br>`kCFHostErrorUnknown` | <q>An unknown error occurred (a name server failure, for example). For additional information, query the kCFGetAddrInfoFailureKey to get the value returned from getaddrinfo; lookup in netdb.h</q> |
+| 100<br>`kCFSOCKSErrorUnknownClientVersion` | <q>The SOCKS server rejected access because it does not support connections with the requested SOCKS version.Query kCFSOCKSStatusCodeKey to recover the status code returned by the server.</q> |
+| 101<br>`kCFSOCKSErrorUnsupportedServerVersion` | <q>The version of SOCKS requested by the server is not supported. Query kCFSOCKSStatusCodeKey to recover the status code returned by the server.<br><br>Query the kCFSOCKSVersionKey to find the version requested by the server.</q> |
+
+### SOCKS4 Errors
+
+| Code | Description |
+|------|-------------|
+| 110<br>`kCFSOCKS4ErrorRequestFailed` | <q>Request rejected or failed by the server.</q> |
+| 111<br>`kCFSOCKS4ErrorIdentdFailed` | <q>Request rejected because SOCKS server cannot connect to identd on the client.</q> |
+| 112<br>`kCFSOCKS4ErrorIdConflict` | <q>Request rejected because the client program and identd report different user-ids.</q> |
+| 113<br>`kCFSOCKS4ErrorUnknownStatusCode` | <q>The status code returned by the server is unknown.</q> |
+
+### SOCKS5 Errors
+
+| Code | Description |
+|------|-------------|
+| 120<br>`kCFSOCKS5ErrorBadState` | <q>The stream is not in a state that allows the requested operation.</q> |
+| 121<br>`kCFSOCKS5ErrorBadResponseAddr` | <q>The address type returned is not supported.</q> |
+| 122<br>`kCFSOCKS5ErrorBadCredentials` | <q>The SOCKS server refused the client connection because of bad login credentials.</q> |
+| 123<br>`kCFSOCKS5ErrorUnsupportedNegotiationMethod` | <q>The requested method is not supported. Query kCFSOCKSNegotiationMethodKey to find the method requested.</q> |
+| 124<br>`kCFSOCKS5ErrorNoAcceptableMethod` | <q>The client and server could not find a mutually agreeable authentication method.</q> |
+
+### FTP Errors
+
+| Code | Description |
+|------|-------------|
+| 200<br>`kCFFTPErrorUnexpectedStatusCode` | <q>The server returned an unexpected status code. Query the kCFFTPStatusCodeKey to get the status code returned by the server</q> |
+
+### HTTP Errors
+
+| Code | Description |
+|------|-------------|
+| 300<br>`kCFErrorHTTPAuthenticationTypeUnsupported` | <q>The client and server could not agree on a supported authentication type.</q> |
+| 301<br>`kCFErrorHTTPBadCredentials` | <q>The credentials provided for an authenticated connection were rejected by the server.</q> |
+| 302<br>`kCFErrorHTTPConnectionLost` | <q>The connection to the server was dropped. This usually indicates a highly overloaded server.</q> |
+| 303<br>`kCFErrorHTTPParseFailure` | <q>The HTTP server response could not be parsed.</q> |
+| 304<br>`kCFErrorHTTPRedirectionLoopDetected` | <q>Too many HTTP redirects occurred before reaching a page that did not redirect the client to another page. This usually indicates a redirect loop.</q> |
+| 305<br>`kCFErrorHTTPBadURL` | <q>The requested URL could not be retrieved.</q> |
+| 306<br>`kCFErrorHTTPProxyConnectionFailure` | <q>A connection could not be established to the HTTP proxy.</q> |
+| 307<br>`kCFErrorHTTPBadProxyCredentials` | <q>The authentication credentials provided for logging into the proxy were rejected.</q> |
+| 308<br>`kCFErrorPACFileError` | <q>An error occurred with the proxy autoconfiguration file.</q> |
+| 309<br>`kCFErrorPACFileAuth` | <q>The authentication credentials provided by the proxy autoconfiguration file were rejected.</q> |
+| 310<br>`kCFErrorHTTPSProxyConnectionFailure` | <q>A connection could not be established to the HTTPS proxy.</q> |
+| 311<br>`kCFStreamErrorHTTPSProxyFailureUnexpectedResponseToCONNECTMethod` | <q>The HTTPS proxy returned an unexpected status code, such as a 3xx redirect.</q> |
+
+### CFURLConnection & CFURLProtocol Errors
+
+| Code | Description |
+|------|-------------|
+| -998<br>`kCFURLErrorUnknown` | <q>An unknown error occurred.</q> |
+| -999<br>`kCFURLErrorCancelled`<br>`NSURLErrorCancelled` | <q>The connection was cancelled.</q> |
+| -1000<br>`kCFURLErrorBadURL`<br>`NSURLErrorBadURL` | <q>The connection failed due to a malformed URL.</q> |
+| -1001<br>`kCFURLErrorTimedOut`<br>`NSURLErrorTimedOut` | <q>The connection timed out.</q> |
+| -1002<br>`kCFURLErrorUnsupportedURL`<br>`NSURLErrorUnsupportedURL` | <q>The connection failed due to an unsupported URL scheme.</q> |
+| -1003<br>`kCFURLErrorCannotFindHost`<br>`NSURLErrorCannotFindHost` | <q>The connection failed because the host could not be found.</q> |
+| -1004<br>`kCFURLErrorCannotConnectToHost`<br>`NSURLErrorCannotConnectToHost` | <q>The connection failed because a connection cannot be made to the host.</q> |
+| -1005<br>`kCFURLErrorNetworkConnectionLost`<br>`NSURLErrorNetworkConnectionLost` | <q>The connection failed because the network connection was lost.</q> |
+| -1006<br>`kCFURLErrorDNSLookupFailed`<br>`NSURLErrorDNSLookupFailed` | <q>The connection failed because the DNS lookup failed.</q> |
+| -1007<br>`kCFURLErrorHTTPTooManyRedirects`<br>`NSURLErrorHTTPTooManyRedirects` | <q>The HTTP connection failed due to too many redirects.</q> |
+| -1008<br>`kCFURLErrorResourceUnavailable`<br>`NSURLErrorResourceUnavailable` | <q>The connection’s resource is unavailable.</q> |
+| -1009<br>`kCFURLErrorNotConnectedToInternet`<br>`NSURLErrorNotConnectedToInternet` | <q>The connection failed because the device is not connected to the internet.</q> |
+| -1010<br>`kCFURLErrorRedirectToNonExistentLocation`<br>`NSURLErrorRedirectToNonExistentLocation` | <q>The connection was redirected to a nonexistent location.</q> |
+| -1011<br>`kCFURLErrorBadServerResponse`<br>`NSURLErrorBadServerResponse` | <q>The connection received an invalid server response.</q> |
+| -1012<br>`kCFURLErrorUserCancelledAuthentication`<br>`NSURLErrorUserCancelledAuthentication` | <q>The connection failed because the user cancelled required authentication.</q> |
+| -1013<br>`kCFURLErrorUserAuthenticationRequired`<br>`NSURLErrorUserAuthenticationRequired` | <q>The connection failed because authentication is required.</q> |
+| -1014<br>`kCFURLErrorZeroByteResource`<br>`NSURLErrorZeroByteResource` | <q>The resource retrieved by the connection is zero bytes.</q> |
+| -1015<br>`kCFURLErrorCannotDecodeRawData`<br>`NSURLErrorCannotDecodeRawData` | <q>The connection cannot decode data encoded with a known content encoding.</q> |
+| -1016<br>`kCFURLErrorCannotDecodeContentData`<br>`NSURLErrorCannotDecodeContentData` | <q>The connection cannot decode data encoded with an unknown content encoding.</q> |
+| -1017<br>`kCFURLErrorCannotParseResponse`<br>`NSURLErrorCannotParseResponse` | <q>The connection cannot parse the server’s response.</q> |
+| -1018<br>`kCFURLErrorInternationalRoamingOff` | <q>The connection failed because international roaming is disabled on the device.</q> |
+| -1019<br>`kCFURLErrorCallIsActive` | <q>The connection failed because a call is active.</q> |
+| -1020<br>`kCFURLErrorDataNotAllowed` | <q>The connection failed because data use is currently not allowed on the device.</q> |
+| -1021<br>`kCFURLErrorRequestBodyStreamExhausted` | <q>The connection failed because its request’s body stream was exhausted.</q> |
+
+### File Errors
+
+| Code | Description |
+|------|-------------|
+| -1100<br>`kCFURLErrorFileDoesNotExist`<br>`NSURLErrorFileDoesNotExist` | <q>The file operation failed because the file does not exist.</q> |
+| -1101<br>`kCFURLErrorFileIsDirectory`<br>`NSURLErrorFileIsDirectory` | <q>The file operation failed because the file is a directory.</q> |
+| -1102<br>`kCFURLErrorNoPermissionsToReadFile`<br>`NSURLErrorNoPermissionsToReadFile` | <q>The file operation failed because it does not have permission to read the file.</q> |
+| -1103<br>`kCFURLErrorDataLengthExceedsMaximum`<br>`NSURLErrorDataLengthExceedsMaximum` | <q>The file operation failed because the file is too large.</q> |
+
+### SSL Errors
+
+| Code | Description |
+|------|-------------|
+| -1200<br>`kCFURLErrorSecureConnectionFailed`<br>`NSURLErrorSecureConnectionFailed` | <q>The secure connection failed for an unknown reason.</q> |
+| -1201<br>`kCFURLErrorServerCertificateHasBadDate`<br>`NSURLErrorServerCertificateHasBadDate` | <q>The secure connection failed because the server’s certificate has an invalid date.</q> |
+| -1202<br>`kCFURLErrorServerCertificateUntrusted`<br>`NSURLErrorServerCertificateUntrusted` | <q>The secure connection failed because the server’s certificate is not trusted.</q> |
+| -1203<br>`kCFURLErrorServerCertificateHasUnknownRoot`<br>`NSURLErrorServerCertificateHasUnknownRoot` | <q>The secure connection failed because the server’s certificate has an unknown root.</q> |
+| -1204<br>`kCFURLErrorServerCertificateNotYetValid`<br>`NSURLErrorServerCertificateNotYetValid` | <q>The secure connection failed because the server’s certificate is not yet valid.</q> |
+| -1205<br>`kCFURLErrorClientCertificateRejected`<br>`NSURLErrorClientCertificateRejected` | <q>The secure connection failed because the client’s certificate was rejected.</q> |
+| -1206<br>`kCFURLErrorClientCertificateRequired`<br>`NSURLErrorClientCertificateRequired` | <q>The secure connection failed because the server requires a client certificate.</q> |
+
+### Download and File I/O Errors
+
+| Code | Description |
+|------|-------------|
+| -2000<br>`kCFURLErrorCannotLoadFromNetwork`<br>`NSURLErrorCannotLoadFromNetwork` | <q>The connection failed because it is being required to return a cached resource, but one is not available.</q> |
+| -3000<br>`kCFURLErrorCannotCreateFile`<br>`NSURLErrorCannotCreateFile` | <q>The file cannot be created.</q> |
+| -3001<br>`kCFURLErrorCannotOpenFile`<br>`NSURLErrorCannotOpenFile` | <q>The file cannot be opened.</q> |
+| -3002<br>`kCFURLErrorCannotCloseFile`<br>`NSURLErrorCannotCloseFile` | <q>The file cannot be closed.</q> |
+| -3003<br>`kCFURLErrorCannotWriteToFile`<br>`NSURLErrorCannotWriteToFile` | <q>The file cannot be written.</q> |
+| -3004<br>`kCFURLErrorCannotRemoveFile`<br>`NSURLErrorCannotRemoveFile` | <q>The file cannot be removed.</q> |
+| -3005<br>`kCFURLErrorCannotMoveFile`<br>`NSURLErrorCannotMoveFile` | <q>The file cannot be moved.</q> |
+| -3006<br>`kCFURLErrorDownloadDecodingFailedMidStream`<br>`NSURLErrorDownloadDecodingFailedMidStream` | <q>The download failed because decoding of the downloaded data failed mid-stream.</q> |
+| -3007<br>`kCFURLErrorDownloadDecodingFailedToComplete`<br>`NSURLErrorDownloadDecodingFailedToComplete` | <q>The download failed because decoding of the downloaded data failed to complete.</q> |
+
+### Cookie errors
+
+| Code | Description |
+|------|-------------|
+| -4000<br>`kCFHTTPCookieCannotParseCookieFile` | <q>The cookie file cannot be parsed.</q> |
+
+### CFNetServices Errors
+
+| Code | Description |
+|------|-------------|
+| -72000L<br>`kCFNetServiceErrorUnknown` | <q>An unknown error occurred.</q> |
+| -72001L<br>`kCFNetServiceErrorCollision` | <q>An attempt was made to use a name that is already in use.</q> |
+| -72002L<br>`kCFNetServiceErrorNotFound` | <q>Not used.</q> |
+| -72003L<br>`kCFNetServiceErrorInProgress` | <q>A new search could not be started because a search is already in progress.</q> |
+| -72004L<br>`kCFNetServiceErrorBadArgument` | <q>A required argument was not provided or was not valid.</q> |
+| -72005L<br>`kCFNetServiceErrorCancel` | <q>The search or service was cancelled.</q> |
+| -72006L<br>`kCFNetServiceErrorInvalid` | <q>Invalid data was passed to a CFNetServices function.</q> |
+| -72007L<br>`kCFNetServiceErrorTimeout` | <q>A search failed because it timed out.</q> |
+| -73000L<br>`kCFNetServiceErrorDNSServiceFailure` | <q>An error from DNS discovery; look at kCFDNSServiceFailureKey to get the error number and interpret using dnssd.h</q> |
 
 * * *
 
 Having scrolled down through that huge table, you might be expecting the usual NSHipster philosophical wrap-up. Not this week. Do you have any idea how long it took to compile that table? It's all, like, `NSRepetitiveStrainInjury` up in here.
 
 Such are the error of my ways.
+
+<style type="text/css">
+h3 + table { border-top: 1px solid #b7b7b7; }
+h3 + table thead { display: none; }
+@media screen and (max-width: 768px) {
+    table { border-top: 1px solid #b7b7b7; }
+    table thead { display: none; }
+    td { display: block; }
+    td:first-child { font-weight: bold; border-bottom: none; padding-bottom: 0 !important; }
+}
+</style>
