Update highlighting in WKInterfaceObject section

--- a/2014-12-01-watchkit.md
+++ b/2014-12-01-watchkit.md
@@ -124,7 +124,7 @@ class WatchListsInterfaceController: WKInterfaceController, ListsControllerDeleg
 
 ### WKInterfaceObject
 
-`WKInterfaceObject` resembles a streamlined rendition of `UIView`, with properties for `alpha`, `hidden`, `horizontal` & `vertical` alignment, and `width` & height.
+`WKInterfaceObject` resembles a streamlined rendition of `UIView`, with properties for `alpha`, `hidden`, `horizontal` & `vertical` alignment, and `width` & `height`.
 
 The most striking difference is the lack of a `frame`. Instead of manually specifying coordinate points or setting up Auto Layout constraints, WatchKit interface objects are laid out in a grid according to their margins and respective ordering, which is reminiscent to working with a CSS framework like [Bootstrap](http://getbootstrap.com) (or for you Rubyists out there, remember [Shoes](http://shoesrb.com)?).
 
