Switch to NS_ASSUME_NONNULL_BEGIN/END

--- a/2015-02-09-swift-1.2.md
+++ b/2015-02-09-swift-1.2.md
@@ -196,15 +196,15 @@ class LocationDataController : NSObject {
 }
 ```
 
-### assume_nonnull
+### NS_ASSUME_NONNULL_BEGIN/END
 
-Annotating *any* pointer in an Objective-C header file causes the compiler to expect annotations for the entire file, bringing on a cascade of warnings. Given that most annotations will be `nonnull`, a new [`#pragma` declaration](/pragma/) can help streamline the process of annotating existing classes. Simply mark the beginning and end of a section of your header with `#pragma clang assume_nonnull begin` and `... end`, then mark the exceptions.
+Annotating *any* pointer in an Objective-C header file causes the compiler to expect annotations for the entire file, bringing on a cascade of warnings. Given that most annotations will be `nonnull`, a new macro can help streamline the process of annotating existing classes. Simply mark the beginning and end of a section of your header with `NS_ASSUME_NONNULL_BEGIN` and `..._END`, then mark the exceptions.
 
 Another revision of our data controller interface from above results in a more readable version with the exact same Swift profile:
 
 ```objective-c
 @interface LocationDataController : NSObject
-#pragma clang assume_nonnull begin
+NS_ASSUME_NONNULL_BEGIN
 
 @property (nonatomic, readonly) NSArray *locations;
 @property (nullable, nonatomic, readonly) Location *latestLocation;
@@ -212,7 +212,7 @@ Another revision of our data controller interface from above results in a more r
 - (void)addPhoto:(Photo *)photo forLocation:(Location *)location;
 - (nullable Photo *)photoForLocation:(Location *)location;
 
-#pragma clang assume_nonnull end
+NS_ASSUME_NONNULL_END
 @end
 ```
 
