Replacing impossible NSURL table

--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -17,47 +17,7 @@ In its most basic form, a URI is comprised of a scheme name and a hierarchical p
 
 Many protocols, including HTTP, specify a regular structure for information like the username, password, port, and path in the hierarchical part:
 
-<table style="font-family:Menlo,monospace;">
-    <thead>
-        <tr>
-            <td>foo</td>
-            <td>://</td>
-            <td>username</td>
-            <td>:</td>
-            <td>password</td>
-            <td>@</td>
-            <td>example.com</td>
-            <td>:</td>
-            <td>8042</td>
-            <td>/over/there/index</td>
-            <td>.</td>
-            <td>dtb</td>
-            <td>?</td>
-            <td>type=animal&amp;name=narwhal</td>
-            <td>#</td>
-            <td>nose</td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr style="text-align:center">
-            <td colspan="2">scheme</td>
-            <td>username</td>
-            <td></td>
-            <td>password</td>
-            <td></td>
-            <td>hostname</td>
-            <td></td>
-            <td>port</td>
-            <td>path</td>
-            <td></td>
-            <td>extension</td>
-            <td></td>
-            <td>query</td>
-            <td></td>
-            <td>fragment</td>
-        </tr>
-    </tbody>
-</table>
+![URL Structure](http://nshipster.s3.amazonaws.com/nsurl.png)
 
 A solid grasp of network programming is rooted in an unshakeable familiarity with URL components. As a software developer, this means having a command over the URI functionality in your programming language's standard library.
 
@@ -77,7 +37,7 @@ If the passed string is not a valid URL, this method will return `nil`.
 
 `NSString` also has some vestigial functionality for path manipulation, [as described a few weeks back](http://nshipster.com/nstemporarydirectory/), but that's being slowly migrated over to `NSURL`. While the extra conversion from `NSString` to `NSURL` is not the most convenient step, it's always worthwhile. If a value is a URL, it should be stored and passed as an `NSURL`; conflating the two types is reckless and lazy API design.
 
->> As a side note, `@@` would be a nice literal for `NSURL`, (e.g. `@@"http://example.com"`), don't you think?
+> As a side note, `@@` would be a nice literal for `NSURL`, (e.g. `@@"http://example.com"`), don't you think?
 
 `NSURL` also has the class method `+URLWithString:relativeToURL:`, which can be used to construct a URL from a string relative to a base URL. The behavior of this method can be a source of confusion, because of how it treats leading `/`'s in relative paths.
 
