add missing; modify according to review

--- a/2013-01-28-nsvalue.md
+++ b/2013-01-28-nsvalue.md
@@ -50,7 +50,7 @@ typedef struct example {
 } Example;
 ~~~
 
-...has the encoding:
+有如下编码：
 
 ~~~{objective-c}
 {example=@*i}
@@ -75,4 +75,4 @@ typedef struct example {
 
 ---
 
-在打开了 `NSValue` 的所有智慧之后，现在你可以面对面向过程和面向对象，C 与 Smalltalk 之间的残酷划分了。因为一个神奇的箱子，所有事情都变得简单。
+在打开了 `NSValue` 的所有智慧之后，现在你可以从容应对面向过程和面向对象、C 与 Smalltalk 之间的残酷划分了。因为一个神奇的箱子，所有事情都变得简单。
