modify according to review

--- a/2013-01-28-nsvalue.md
+++ b/2013-01-28-nsvalue.md
@@ -8,15 +8,15 @@ tags: nshipster
 excerpt: "打包就是用一个面向对象的容器来封装标量及其他一些值类型的过程，主要用于将那些值保存到面向对象的集合中——如数组和字典。在基础类库中，以轻量级著称的一个包装便是 NSValue 。"
 ---
 
-作为在电影 [eponymous 2012 biopic](http://www.imdb.com/title/tt0443272/) 中出演亚伯拉罕·林肯的一部分，丹尼尔·戴 - 刘易斯坚决要求每次进出剧组时要通过一个标有“时间机器”字样的冷库箱子。<del markdown="1">[真实的故事](http://filmdrunk.uproxx.com/2012/10/daniel-day-lewis-method-acting-lincoln-ny-times-profile)</del>.
+在电影 [eponymous 2012 biopic](http://www.imdb.com/title/tt0443272/) 中出演亚伯拉罕·林肯一角时，丹尼尔·戴 - 刘易斯坚决要求每次进出剧组时要通过一个标有“时间机器”字样的冷库箱子。<del markdown="1">[真实的故事](http://filmdrunk.uproxx.com/2012/10/daniel-day-lewis-method-acting-lincoln-ny-times-profile)</del>.
 
 当戴 - 刘易斯先生要进行方法演技时那当然会不择手段，人们对用一个神奇的硬纸板箱连接了现代世界和历史世界这件荒唐的事无不感到惊讶。 
 
 然而，为作一个 Objective-C 的程序员，这 _正好_ 是我们正在做的。
 
-……好吧，不是 _正好_ ，但是也涉及到一个箱子。
+……好吧，不是 _正好_ ，但这里也需要有一个箱子。
 
-就像在 NSHipster 中 [一而再](http://nshipster.cn/ns_enum-ns_options/) [再而三](http://nshipster.cn/nil/) 地提到的那样，是什么让 Objective-C 保持如此的好奇心？正是将过时的，面向过程的 C 的世界与受 Smalltalk 影响的现代的面向对象的世界兼并的方法。如果能恰到好处地兼并，两个世界的对立关系就可以被用来熟练地开发语义上丰富的软件，而不牺牲性能。但是在新与旧的鸿沟之间架桥的却是乌烟瘴气的强制类型转换、无缝转换和包装。
+就像在 NSHipster 中 [一而再](http://nshipster.cn/ns_enum-ns_options/) [再而三](http://nshipster.cn/nil/) 地提到的那样，是什么让 Objective-C 如此的神奇？正是将过时的，面向过程的 C 的世界与受 Smalltalk 影响的现代的面向对象的世界兼并的方法。如果能恰到好处地兼并，两个世界的对立关系就可以被用来熟练地开发语义上丰富的软件，而不牺牲性能。但是在新与旧的鸿沟之间架桥的却是乌烟瘴气的强制类型转换、无缝转换和包装。
 
 打包就是用面向对象的容器来封装标量（`int`，`double`，`BOOL` 等）和值类型（`struct`，`enum`）的过程，主要用于将那些值保存到面向对象的集合中——如数组和字典。
 
